Fix cards not respecting dark mode

--- a/website/static/website/styles/base.css
+++ b/website/static/website/styles/base.css
@@ -417,3 +417,7 @@ footer {
   background-color: #282828;
   border: 1px solid #fff;
 }
+
+.dark-theme .card {
+  background-color: #484848;
+}
